--- a/Projeto_Contabil/src/projeto_contabil/FXMLDocument.fxml
+++ b/Projeto_Contabil/src/projeto_contabil/FXMLDocument.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import java.net.*?>
 <?import java.lang.*?>
@@ -14,54 +15,82 @@
     </stylesheets>
     
     <children>
-      <ScrollPane fx:id="painel3" layoutX="-8.0" layoutY="-6.0" prefHeight="616.0" prefWidth="794.0">
-        <content>
-          <AnchorPane fx:id="painel1" minHeight="0.0" minWidth="0.0" prefHeight="62.0" prefWidth="70.0">
-               <children>
-                  <AnchorPane fx:id="painel2" prefHeight="646.0" prefWidth="794.0" style="-fx-background-color: #1d1d1d;">
-                     <children>
-                        <Button fx:id="cliente" layoutX="664.0" layoutY="24.0" mnemonicParsing="false" onAction="#client_button" prefHeight="55.0" prefWidth="94.0" text="Cliente" />
-                        <Button fx:id="financeiro" layoutX="285.0" layoutY="24.0" mnemonicParsing="false" onAction="#finance_button" prefHeight="55.0" prefWidth="126.0" text="Financeiro" textFill="#0404ff" />
-                        <Button fx:id="entradas" layoutX="545.0" layoutY="24.0" mnemonicParsing="false" onAction="#in_button" prefHeight="55.0" prefWidth="108.0" text="Entadas" />
-                        <Button fx:id="saidas" layoutX="425.0" layoutY="24.0" mnemonicParsing="false" onAction="#out_button" prefHeight="55.0" prefWidth="108.0" text="Saídas" />
-                        <Label fx:id="nome_usuario" layoutX="68.0" layoutY="52.0" prefHeight="29.0" prefWidth="199.0" text="Nome do Usuário informado" textFill="#0049f5" />
-                        <Pane layoutX="7.0" layoutY="87.0" prefHeight="525.0" prefWidth="200.0">
-                           <children>
-                              <ComboBox fx:id="ferramentas" layoutX="7.0" layoutY="14.0" onAction="#ferramentas_menu" prefWidth="150.0" promptText="Ferramentas" />
-                              <Label layoutX="7.0" layoutY="496.0" prefHeight="29.0" prefWidth="78.0" text="Hora Sistema" textFill="#0049f5" />
-                              <Label layoutX="7.0" layoutY="475.0" prefHeight="29.0" prefWidth="125.0" text="Data Sistema" textFill="#0049f5" />
-                           </children>
-                        </Pane>
-                        <MenuBar fx:id="barra_arquivo" layoutX="81.0" layoutY="7.0" prefHeight="0.0" prefWidth="174.0">
-                          <menus>
-                            <Menu mnemonicParsing="false" text="File">
-                              <items>
-                                <MenuItem mnemonicParsing="false" text="Close" />
-                              </items>
-                            </Menu>
-                            <Menu mnemonicParsing="false" text="Edit">
-                              <items>
-                                <MenuItem mnemonicParsing="false" text="Delete" />
-                              </items>
-                            </Menu>
-                            <Menu mnemonicParsing="false" text="Help">
-                              <items>
-                                <MenuItem mnemonicParsing="false" text="About" />
-                              </items>
-                            </Menu>
-                          </menus>
-                        </MenuBar>
-                     </children>
-                  </AnchorPane>
-                  <ImageView fx:id="logo" fitHeight="65.0" fitWidth="80.0" layoutX="4.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@logotype-eurodoc-e-print.png" />
-                     </image>
-                  </ImageView>
+              <ScrollPane fx:id="painel3" layoutX="-8.0" layoutY="-6.0" prefHeight="616.0" prefWidth="794.0">
+            <content>
+                <AnchorPane fx:id="painel1" minHeight="0.0" minWidth="0.0" prefHeight="62.0" prefWidth="70.0">
+                    <children>
+                        <AnchorPane fx:id="painel2" prefHeight="646.0" prefWidth="794.0" style="-fx-background-color: #1d1d1d;">
+                            <children>
+                                <Button fx:id="cliente" layoutX="540.0" layoutY="24.0" mnemonicParsing="false" onAction="#client_button" prefHeight="55.0" prefWidth="76.0" text="Cli">
+                                    <tooltip>
+                                        <Tooltip text="Cliente" />
+                                    </tooltip>
+                                </Button>
+                                <Button fx:id="financeiro" layoutX="259.0" layoutY="24.0" mnemonicParsing="false" onAction="#finance_button" prefHeight="55.0" prefWidth="89.0" text="Fin" textFill="#259afc">
+                                    <tooltip>
+                                        <Tooltip text="Financeiro" />
+                                    </tooltip>
+                                </Button>
+                                <Button fx:id="integra_banc" layoutX="448.0" layoutY="24.0" mnemonicParsing="false" onAction="#int_button" prefHeight="55.0" prefWidth="85.0" text="Intergação">
+                                    <tooltip>
+                                        <Tooltip text="Integração Bancária" />
+                                    </tooltip>
+                                </Button>
+                                <Button fx:id="entradas_saidas" layoutX="354.0" layoutY="24.0" mnemonicParsing="false" onAction="#in_out_button" prefHeight="55.0" prefWidth="86.0" text="in out">
+                                    <tooltip>
+                                        <Tooltip text="Entradas/Saídas" />
+                                    </tooltip>
+                                </Button>
+                                <Label fx:id="nome_usuario" layoutX="68.0" layoutY="52.0" prefHeight="29.0" prefWidth="199.0" text="Nome do Usuário informado" textFill="#0049f5" />
+                                <MenuBar fx:id="barra_arquivo" layoutX="81.0" layoutY="7.0" prefHeight="0.0" prefWidth="174.0">
+                                    <menus>
+                                        <Menu mnemonicParsing="false" text="File">
+                                            <items>
+                                                <MenuItem mnemonicParsing="false" text="Close" />
+                                            </items>
+                                        </Menu>
+                                        <Menu mnemonicParsing="false" text="Edit">
+                                            <items>
+                                                <MenuItem mnemonicParsing="false" text="Delete" />
+                                            </items>
+                                        </Menu>
+                                        <Menu mnemonicParsing="false" text="Help">
+                                            <items>
+                                                <MenuItem mnemonicParsing="false" text="About" />
+                                            </items>
+                                        </Menu>
+                                    </menus>
+                                </MenuBar>
+                        <ImageView fitHeight="374.0" fitWidth="351.0" layoutX="348.0" layoutY="163.0" opacity="0.25" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@user_info_database_person_data_profile-512.png" />
+                           </image>
+                        </ImageView>
+                        <TextFlow fx:id="text_lembretes" layoutX="359.0" layoutY="163.0" prefHeight="156.0" prefWidth="250.0" />
+                        <Button fx:id="investimento" layoutX="623.0" layoutY="24.0" mnemonicParsing="false" onAction="#invest_button" prefHeight="55.0" prefWidth="76.0" text="Invest">
+                           <tooltip>
+                              <Tooltip text="Investimentos" />
+                           </tooltip>
+                        </Button>
+                        <Button fx:id="patrimonio" layoutX="705.0" layoutY="24.0" mnemonicParsing="false" onAction="#patrimonio_button" prefHeight="55.0" prefWidth="76.0" text="Patri">
+                           <tooltip>
+                              <Tooltip text="Patrimonio" />
+                           </tooltip>
+                        </Button>
+                                  <ComboBox fx:id="ferramentas" layoutX="22.0" layoutY="117.0" onAction="#ferramentas_menu" prefWidth="150.0" promptText="Ferramentas" />
+                                  <Label layoutX="19.0" layoutY="575.0" prefHeight="29.0" prefWidth="78.0" text="Hora Sistema" textFill="#0049f5" />
+                                  <Label layoutX="19.0" layoutY="554.0" prefHeight="29.0" prefWidth="125.0" text="Data Sistema" textFill="#259afc" />
+                            </children>
+                        </AnchorPane>
+                        <ImageView fx:id="logo" fitHeight="65.0" fitWidth="80.0" layoutX="4.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@logotype-eurodoc-e-print.png" />
+                            </image>
+                        </ImageView>
                  
-               </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
-   </children>
+                    </children>
+                </AnchorPane>
+            </content>
+        </ScrollPane>
+    </children>
 </AnchorPane>
