--- a/Projeto_Contabil/src/projeto_contabil/Vista.fxml
+++ b/Projeto_Contabil/src/projeto_contabil/Vista.fxml
@@ -44,12 +44,12 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="59.0" prefWidth="318.0">
                <children>
                    <!-- entrada -->
-                  <TextField fx:id="entrada" layoutX="0" layoutY="0" onAction="#evaluar" prefHeight="28.0" prefWidth="320.0" />
+                  <TextField fx:id="entrada" layoutX="0" layoutY="0" onAction="#evaluar" prefHeight="33.0" prefWidth="320.0" style="-fx-background-color: #fff;" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <GridPane prefHeight="167.0" prefWidth="318.0" style="-fx-background-color: #1d1d1d;">
+                  <GridPane prefHeight="167.0" prefWidth="318.0" style="-fx-background-color: #0d0d0d;">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -64,23 +64,23 @@
                     </rowConstraints>
                      <children>
                          <!-- botones -->
-                        <Button mnemonicParsing="false" onAction="#otroBoton" text="1" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" text="2" GridPane.columnIndex="1" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" text="3" GridPane.columnIndex="2" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" text="4" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" text="7" GridPane.rowIndex="2" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="33.0" prefWidth="108.0" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Button mnemonicParsing="false" onAction="#borrar" styleClass="orange" text="C" GridPane.rowIndex="3" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" styleClass="operador" text="+" GridPane.columnIndex="3" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" styleClass="operador" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" styleClass="operador" text="*" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                        <Button mnemonicParsing="false" onAction="#otroBoton" styleClass="operador" text="/" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="62.0" prefWidth="79.0" text="1" textFill="#259afc" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="70.0" prefWidth="79.0" text="2" textFill="#259afc" GridPane.columnIndex="1" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="66.0" prefWidth="80.0" text="3" GridPane.columnIndex="2" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="56.0" prefWidth="79.0" text="4" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="71.0" prefWidth="79.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="60.0" prefWidth="80.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="71.0" prefWidth="79.0" text="7" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="63.0" prefWidth="79.0" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="59.0" prefWidth="80.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="56.0" prefWidth="79.0" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Button mnemonicParsing="false" onAction="#borrar" prefHeight="33.0" prefWidth="117.0" style="-fx-background-color: #fffff;" styleClass="orange" text="C" GridPane.rowIndex="3" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="33.0" prefWidth="98.0" styleClass="operador" text="+" GridPane.columnIndex="3" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="33.0" prefWidth="90.0" styleClass="operador" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="33.0" prefWidth="96.0" styleClass="operador" text="*" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" onAction="#otroBoton" prefHeight="33.0" prefWidth="97.0" styleClass="operador" text="/" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                         <!-- simbolo Igual -->
-                        <Button mnemonicParsing="false" onAction="#evaluar" styleClass="orange" text="=" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                        <Button mnemonicParsing="false" onAction="#evaluar" prefHeight="33.0" prefWidth="96.0" styleClass="orange" text="=" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                      </children>
                   </GridPane>
                </children>
