--- a/Projeto_Contabil/src/projeto_contabil/in_out.css
+++ b/Projeto_Contabil/src/projeto_contabil/in_out.css
@@ -20,14 +20,14 @@
 .label-bright {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
-    -fx-text-fill: #259afc;
+    -fx-text-fill: white;
     -fx-opacity: 1;
 }
 
 .label-header {
     -fx-font-size: 32pt;
     -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: #259afc;
+    -fx-text-fill: white;
     -fx-opacity: 1;
 }
 
@@ -88,7 +88,7 @@
 .menu-bar .label {
     -fx-font-size: 14pt;
     -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: #259afc;
+    -fx-text-fill: white;
     -fx-opacity: 0.9;
 }
 
