--- a/Projeto_Contabil/src/projeto_contabil/Client.fxml
+++ b/Projeto_Contabil/src/projeto_contabil/Client.fxml
@@ -26,31 +26,31 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="86.0" layoutY="35.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
+                        <TextField fx:id="client_nome" layoutX="86.0" layoutY="35.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
                         <Label layoutX="32.0" layoutY="79.0" text="Idade do cliente" textFill="#259afc">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="86.0" layoutY="100.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
+                        <TextField fx:id="client_idade" layoutX="86.0" layoutY="100.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
                         <Label layoutX="31.0" layoutY="142.0" text="Saldo Bancário do cliente" textFill="#259afc">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="86.0" layoutY="163.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
+                        <TextField fx:id="client_saldo" layoutX="86.0" layoutY="163.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
                         <Label layoutX="31.0" layoutY="207.0" text="Salário do cliente" textFill="#259afc">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="86.0" layoutY="228.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
+                        <TextField fx:id="client_salario" layoutX="86.0" layoutY="228.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
                         <Label layoutX="28.0" layoutY="272.0" text="CPF do cliente" textFill="#259afc">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="86.0" layoutY="293.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
+                        <TextField fx:id="client_cpf" layoutX="86.0" layoutY="293.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
                         <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@Administrator-512.png" />
@@ -73,7 +73,7 @@
                            </image>
                         </ImageView>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="13.0" layoutX="520.0" layoutY="72.0" stroke="BLACK" strokeType="INSIDE" width="41.0" />
-                        <ComboBox layoutX="14.0" layoutY="39.0" prefWidth="150.0" promptText="Clientes" />
+                        <ComboBox fx:id="client_box1" layoutX="14.0" layoutY="39.0" prefWidth="150.0" promptText="Clientes" />
                         <Button fx:id="remove" layoutX="58.0" layoutY="79.0" mnemonicParsing="false" onAction="#press_remove" text="Remover" textFill="#259afc" />
                      </children>
                   </AnchorPane>
@@ -83,9 +83,9 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ComboBox layoutX="14.0" layoutY="37.0" prefWidth="150.0" promptText="Clientes" />
-                        <TextArea layoutX="300.0" layoutY="50.0" prefHeight="294.0" prefWidth="282.0" />
-                        <Button layoutX="90.0" layoutY="75.0" mnemonicParsing="false" text="Info" />
+                        <ComboBox fx:id="client_box" layoutX="14.0" layoutY="37.0" prefWidth="150.0" promptText="Clientes" />
+                        <TextArea fx:id="area" layoutX="300.0" layoutY="50.0" prefHeight="294.0" prefWidth="282.0" />
+                        <Button fx:id="find" layoutX="90.0" layoutY="75.0" mnemonicParsing="false" onAction="#find_client" text="Info" />
                         <ImageView fitHeight="179.0" fitWidth="222.0" layoutX="44.0" layoutY="165.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@1-user-search-512.png" />
