--- a/Projeto_Contabil/src/projeto_contabil/FXMLDocument.fxml
+++ b/Projeto_Contabil/src/projeto_contabil/FXMLDocument.fxml
@@ -21,65 +21,42 @@
                     <children>
                         <AnchorPane fx:id="painel2" prefHeight="646.0" prefWidth="794.0" style="-fx-background-color: #1d1d1d;">
                             <children>
-                                <Button fx:id="cliente" layoutX="540.0" layoutY="24.0" mnemonicParsing="false" onAction="#client_button" prefHeight="55.0" prefWidth="76.0" text="Cli">
+                                <Button fx:id="cliente" layoutX="561.0" layoutY="24.0" mnemonicParsing="false" onAction="#client_button" prefHeight="60.0" prefWidth="80.0" text="Clientes" textFill="#259afc">
                                     <tooltip>
                                         <Tooltip text="Cliente" />
                                     </tooltip>
                                 </Button>
-                                <Button fx:id="financeiro" layoutX="259.0" layoutY="24.0" mnemonicParsing="false" onAction="#finance_button" prefHeight="55.0" prefWidth="89.0" text="Fin" textFill="#259afc">
+                                <Button fx:id="financeiro" layoutX="259.0" layoutY="24.0" mnemonicParsing="false" onAction="#finance_button" prefHeight="60.0" prefWidth="80.0" text="Financeiro" textFill="#259afc">
                                     <tooltip>
                                         <Tooltip text="Financeiro" />
                                     </tooltip>
                                 </Button>
-                                <Button fx:id="integra_banc" layoutX="448.0" layoutY="24.0" mnemonicParsing="false" onAction="#int_button" prefHeight="55.0" prefWidth="85.0" text="Intergação">
+                                <Button fx:id="integra_banc" layoutX="460.0" layoutY="24.0" mnemonicParsing="false" onAction="#int_button" prefHeight="60.0" prefWidth="80.0" text="Intergação Bancária" textFill="#259afc">
                                     <tooltip>
                                         <Tooltip text="Integração Bancária" />
                                     </tooltip>
                                 </Button>
-                                <Button fx:id="entradas_saidas" layoutX="354.0" layoutY="24.0" mnemonicParsing="false" onAction="#in_out_button" prefHeight="55.0" prefWidth="86.0" text="in out">
+                                <Button fx:id="entradas_saidas" layoutX="359.0" layoutY="24.0" mnemonicParsing="false" onAction="#in_out_button" prefHeight="60.0" prefWidth="80.0" text="Saídas" textFill="#259afc">
                                     <tooltip>
-                                        <Tooltip text="Entradas/Saídas" />
+                                        <Tooltip text="Saídas" />
                                     </tooltip>
                                 </Button>
-                                <Label fx:id="nome_usuario" layoutX="68.0" layoutY="52.0" prefHeight="29.0" prefWidth="199.0" text="Nome do Usuário informado" textFill="#0049f5" />
-                                <MenuBar fx:id="barra_arquivo" layoutX="81.0" layoutY="7.0" prefHeight="0.0" prefWidth="174.0">
-                                    <menus>
-                                        <Menu mnemonicParsing="false" text="File">
-                                            <items>
-                                                <MenuItem mnemonicParsing="false" text="Close" />
-                                            </items>
-                                        </Menu>
-                                        <Menu mnemonicParsing="false" text="Edit">
-                                            <items>
-                                                <MenuItem mnemonicParsing="false" text="Delete" />
-                                            </items>
-                                        </Menu>
-                                        <Menu mnemonicParsing="false" text="Help">
-                                            <items>
-                                                <MenuItem mnemonicParsing="false" text="About" />
-                                            </items>
-                                        </Menu>
-                                    </menus>
-                                </MenuBar>
+                                <Label fx:id="nome_usuario" layoutX="68.0" layoutY="52.0" prefHeight="29.0" prefWidth="199.0" textFill="#0049f5" />
                         <ImageView fitHeight="374.0" fitWidth="351.0" layoutX="348.0" layoutY="163.0" opacity="0.25" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@user_info_database_person_data_profile-512.png" />
                            </image>
                         </ImageView>
                         <TextFlow fx:id="text_lembretes" layoutX="359.0" layoutY="163.0" prefHeight="156.0" prefWidth="250.0" />
-                        <Button fx:id="investimento" layoutX="623.0" layoutY="24.0" mnemonicParsing="false" onAction="#invest_button" prefHeight="55.0" prefWidth="76.0" text="Invest">
+                        <Button fx:id="patrimonio" layoutX="665.0" layoutY="24.0" mnemonicParsing="false" onAction="#patrimonio_button" prefHeight="60.0" prefWidth="80.0" text="Patrimônio" textFill="#259afc">
                            <tooltip>
-                              <Tooltip text="Investimentos" />
-                           </tooltip>
-                        </Button>
-                        <Button fx:id="patrimonio" layoutX="705.0" layoutY="24.0" mnemonicParsing="false" onAction="#patrimonio_button" prefHeight="55.0" prefWidth="76.0" text="Patri">
-                           <tooltip>
-                              <Tooltip text="Patrimonio" />
+                              <Tooltip text="Patrimônio/Entradas" />
                            </tooltip>
                         </Button>
                                   <ComboBox fx:id="ferramentas" layoutX="22.0" layoutY="117.0" onAction="#ferramentas_menu" prefWidth="150.0" promptText="Ferramentas" />
-                                  <Label layoutX="19.0" layoutY="575.0" prefHeight="29.0" prefWidth="78.0" text="Hora Sistema" textFill="#0049f5" />
-                                  <Label layoutX="19.0" layoutY="554.0" prefHeight="29.0" prefWidth="125.0" text="Data Sistema" textFill="#259afc" />
+                                  <Label fx:id="horasis" layoutX="19.0" layoutY="575.0" prefHeight="29.0" prefWidth="78.0" text="Hora Sistema" textFill="#0049f5" />
+                                  <Label fx:id="datasis" layoutX="19.0" layoutY="554.0" prefHeight="29.0" prefWidth="125.0" text="Data Sistema" textFill="#259afc" />
+                        <Button fx:id="register_button" layoutX="80.0" layoutY="24.0" mnemonicParsing="false" onAction="#act_register" style="-fx-background-color: #1d1d1d; -fx-border-color: #259afc;" text="Register In New User" textFill="#259afc" />
                             </children>
                         </AnchorPane>
                         <ImageView fx:id="logo" fitHeight="65.0" fitWidth="80.0" layoutX="4.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
