--- a/Projeto_Contabil/src/projeto_contabil/Fxml_tableview.fxml
+++ b/Projeto_Contabil/src/projeto_contabil/Fxml_tableview.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="CENTER" hgap="10.0" prefHeight="492.0" prefWidth="653.0" style="-fx-background-color: #1d1d1d;" vgap="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxmltableview.FXMLTableViewController">
+<GridPane alignment="CENTER" hgap="10.0" prefHeight="492.0" prefWidth="653.0" style="-fx-background-color: #1d1d1d;" vgap="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projeto_contabil.FXMLTableViewController">
   <padding>
     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
   </padding>
@@ -76,7 +76,6 @@
       <AnchorPane GridPane.columnIndex="1" GridPane.rowIndex="4">
          <children>
             <Button fx:id="delete" alignment="CENTER" contentDisplay="CENTER" layoutX="38.0" onAction="#deletePerson" prefHeight="27.0" prefWidth="89.0" style="-fx-background-color: #1d1d1d; -fx-border-color: #fff;" text="Delete" textFill="#259afc" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Button fx:id="edit" alignment="CENTER" contentDisplay="CENTER" layoutX="162.0" onAction="#editPerson" prefHeight="27.0" prefWidth="89.0" style="-fx-background-color: #1d1d1d; -fx-border-color: #fff;" text="Edit" textFill="#259afc" />
          </children>
       </AnchorPane>
    </children>
