--- a/Projeto_Contabil/src/projeto_contabil/In_out.fxml
+++ b/Projeto_Contabil/src/projeto_contabil/In_out.fxml
@@ -46,7 +46,7 @@
                               <TextField fx:id="val_aliment" layoutX="37.0" layoutY="219.0" prefWidth="164.0" style="-fx-background-color: #9eeef7;" />
                               <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@808-24-512.png" />
+                                    <Image url="@5-808-24-512.png" />
                                  </image>
                               </ImageView>
                               <Button fx:id="save_aliment" layoutX="248.0" layoutY="291.0" mnemonicParsing="false" onAction="#aliment_save" text="Salvar" />
@@ -79,7 +79,7 @@
                               <TextField fx:id="diver_desc" layoutX="37.0" layoutY="68.0" prefHeight="25.0" prefWidth="164.0" promptText="Local, etc." style="-fx-background-color: #9eeef7;" />
                               <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@design11-512.png" />
+                                    <Image url="@13-design11-512.png" />
                                  </image>
                               </ImageView>
                               <Button fx:id="save_desc" layoutX="248.0" layoutY="291.0" mnemonicParsing="false" onAction="#desc_save" text="Salvar" />
@@ -112,7 +112,7 @@
                               <TextField fx:id="edu_desc" layoutX="37.0" layoutY="68.0" prefWidth="164.0" promptText="Local, etc." style="-fx-background-color: #9eeef7;" />
                               <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="355.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Education_User_1-512.png" />
+                                    <Image url="@8-Education_User_1-512.png" />
                                  </image>
                               </ImageView>
                               <Button fx:id="save_edu" layoutX="248.0" layoutY="291.0" mnemonicParsing="false" onAction="#edu_save" text="Salvar" />
@@ -145,7 +145,7 @@
                               <TextField fx:id="fun_val" layoutX="37.0" layoutY="219.0" prefWidth="164.0" style="-fx-background-color: #9eeef7;" />
                               <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Electric-Guitar-512.png" />
+                                    <Image url="@9-Electric-Guitar-512.png" />
                                  </image>
                               </ImageView>
                               <Button fx:id="fun_save" layoutX="248.0" layoutY="291.0" mnemonicParsing="false" onAction="#save_fun" text="Salvar" />
@@ -177,7 +177,7 @@
                               <TextField fx:id="h_val" layoutX="37.0" layoutY="219.0" prefWidth="164.0" style="-fx-background-color: #9eeef7;" />
                               <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Cardiovascular-512.png" />
+                                    <Image url="@7-Cardiovascular-512.png" />
                                  </image>
                               </ImageView>
                               <Button fx:id="h_save" layoutX="248.0" layoutY="291.0" mnemonicParsing="false" onAction="#save_h" text="Salvar" />
@@ -210,7 +210,7 @@
                               <TextField fx:id="sec_val" layoutX="37.0" layoutY="219.0" prefWidth="164.0" style="-fx-background-color: #9eeef7;" />
                               <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@office-lock-input-512.png" />
+                                    <Image url="@15-office-lock-input-512.png" />
                                  </image>
                               </ImageView>
                               <Button fx:id="sec_save" layoutX="248.0" layoutY="291.0" mnemonicParsing="false" onAction="#save_sec" text="Salvar" />
@@ -243,7 +243,7 @@
                               <TextField fx:id="vest_val" layoutX="37.0" layoutY="219.0" prefWidth="164.0" style="-fx-background-color: #9eeef7;" />
                               <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@User-Store-512.png" />
+                                    <Image url="@12-User-Store-512.png" />
                                  </image>
                               </ImageView>
                               <Button fx:id="vest_save" layoutX="248.0" layoutY="291.0" mnemonicParsing="false" onAction="#save_vest" text="Salvar" />
@@ -276,7 +276,7 @@
                               <TextField fx:id="trip_val" layoutX="37.0" layoutY="219.0" prefWidth="164.0" style="-fx-background-color: #9eeef7;" />
                               <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@People-512.png" />
+                                    <Image url="@10-People-512.png" />
                                  </image>
                               </ImageView>
                               <Button fx:id="trip_save" layoutX="248.0" layoutY="291.0" mnemonicParsing="false" onAction="#save_trip" text="Salvar" />
