--- a/Projeto_Contabil/src/projeto_contabil/Client.fxml
+++ b/Projeto_Contabil/src/projeto_contabil/Client.fxml
@@ -53,7 +53,7 @@
                         <TextField fx:id="client_cpf" layoutX="86.0" layoutY="293.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
                         <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@Administrator-512.png" />
+                              <Image url="@6-Administrator-512.png" />
                            </image>
                         </ImageView>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="42.0" layoutX="525.0" layoutY="58.0" stroke="BLACK" strokeType="INSIDE" width="16.0" />
@@ -63,13 +63,52 @@
                   </AnchorPane>
             </content>
           </Tab>
+            <Tab style="-fx-background-color: #9eeef7;" text="Editar Cliente">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fitHeight="268.0" fitWidth="218.0" layoutX="335.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@6-Administrator-512.png" />
+                           </image>
+                        </ImageView>
+                        <TextField fx:id="edit_name" layoutX="85.0" layoutY="63.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
+                        <TextField fx:id="edit_age" layoutX="85.0" layoutY="121.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
+                        <Label layoutX="14.0" layoutY="216.0" text="Salário do cliente" textFill="#259afc">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="edit_money" layoutX="85.0" layoutY="179.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
+                        <Label layoutX="12.0" layoutY="158.0" text="Saldo Bancário do cliente" textFill="#259afc">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="edit_salary" layoutX="85.0" layoutY="237.0" prefHeight="25.0" prefWidth="199.0" style="-fx-background-color: #9eeef7;" />
+                        <Label layoutX="14.0" layoutY="100.0" text="Idade do cliente" textFill="#259afc">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="13.0" layoutY="42.0" text="Nome do cliente" textFill="#259afc">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="savealt" layoutX="106.0" layoutY="295.0" mnemonicParsing="false" onAction="#altsave" text="Salvar Alterações" />
+                        <ComboBox fx:id="box_cliente_edit" layoutX="284.0" layoutY="28.0" prefWidth="150.0" promptText="Clientes" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
           <Tab style="-fx-background-color: #9eeef7;" text="Remover Cliente">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <ImageView fitHeight="293.0" fitWidth="228.0" layoutX="333.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@Administrator-512.png" />
+                              <Image url="@6-Administrator-512.png" />
                            </image>
                         </ImageView>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="13.0" layoutX="520.0" layoutY="72.0" stroke="BLACK" strokeType="INSIDE" width="41.0" />
